-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.1.0
-
None
-
1da61869797f82f9cac6f452c2059a4ef8f5e6e5 6bf98fb7c305ab58204fe85c2a58b2c4a79066f6
Qt Quick App Wizard: set Network capability in teh main .pro file (instead of DEFINE NETWORKACCESS). And also make Network access a default in the wizard.
This should ideally happen in Qt Creator 2.1, since the main .pro file won't be updateable once generated.