App wizard template: Network capabilty on by default

Sets the Network capabilty on by default, in the wizard.

Task-Number: QTCREATORBUG-3594
reviewed-by: con